oracle kubernetes/clani-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skavtko-clani
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skavtko-clani
  template:
    metadata:
      labels:
        app: skavtko-clani
    spec:
      containers:
      - name: skavtko-clani-container
        image: fra.ocir.io/frcrlvuwzvij/skavtko-clani:oke
        ports:
          - containerPort: 8071
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /v1/clani/liveness
            port: 8071
          initialDelaySeconds: 40
          periodSeconds: 10
      imagePullSecrets:
        - name: ocr-login-secret
