oracle kubernetes/osebnospremljanje-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skavtko-os
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: skavtko-os
  template:
    metadata:
      labels:
        app: skavtko-os
    spec:
      containers:
      - name: skavtko-os-container
        image: fra.ocir.io/frcrlvuwzvij/skavtko-osebnospremljanje:oke
        ports:
          - containerPort: 8075
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /v1/osebno-spremljanje/liveness
            port: 8075
          initialDelaySeconds: 40
          periodSeconds: 10
      imagePullSecrets:
        - name: ocr-login-secret
