oracle kubernetes/skupine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skavtko-skupine
spec:
  replicas: 1  # Set the number of replicas to 3
  selector:
    matchLabels:
      app: skavtko-skupine
  template:
    metadata:
      labels:
        app: skavtko-skupine
    spec:
      containers:
      - name: skavtko-skupine-container
        image: fra.ocir.io/frcrlvuwzvij/skavtko-skupine:oke
        ports:
          - containerPort: 8072
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /v1/skupine/liveness
            port: 8072
          initialDelaySeconds: 40
          periodSeconds: 10
      imagePullSecrets:
        - name: ocr-login-secret
