oracle kubernetes/srecanja-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skavtko-srecanja
spec:
  replicas: 1  # Set the number of replicas to 3
  selector:
    matchLabels:
      app: skavtko-srecanja
  template:
    metadata:
      labels:
        app: skavtko-srecanja
    spec:
      containers:
      - name: skavtko-srecanja-container
        image: fra.ocir.io/frcrlvuwzvij/skavtko-srecanja:oke
        ports:
          - containerPort: 8073
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /v1/srecanja/liveness
            port: 8073
          initialDelaySeconds: 40
          periodSeconds: 10
      imagePullSecrets:
        - name: ocr-login-secret
