oracle kubernetes/termini-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skavtko-termini
spec:
  replicas: 1  # Set the number of replicas to 3
  selector:
    matchLabels:
      app: skavtko-termini
  template:
    metadata:
      labels:
        app: skavtko-termini
    spec:
      containers:
      - name: skavtko-termini-container
        image: fra.ocir.io/frcrlvuwzvij/skavtko-termini:oke
        ports:
          - containerPort: 8076
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /v1/termini/liveness
            port: 8076
          initialDelaySeconds: 40
          periodSeconds: 10
      imagePullSecrets:
        - name: ocr-login-secret
