oracle kubernetes/all-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: skavtko-clani
spec:
  selector:
    app: skavtko-clani
  ports:
    - protocol: TCP
      port: 8071
      targetPort: 8071
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: skavtko-skupine
spec:
  selector:
    app: skavtko-skupine
  ports:
    - protocol: TCP
      port: 8072
      targetPort: 8072
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: skavtko-srecanja
spec:
  selector:
    app: skavtko-srecanja
  ports:
    - protocol: TCP
      port: 8073
      targetPort: 8073
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: skavtko-prisotnosti
spec:
  selector:
    app: skavtko-prisotnosti
  ports:
    - protocol: TCP
      port: 8074
      targetPort: 8074
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: skavtko-osebnospremljanje
spec:
  selector:
    app: skavtko-os
  ports:
    - protocol: TCP
      port: 8075
      targetPort: 8075
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: skavtko-termini
spec:
  selector:
    app: skavtko-termini
  ports:
    - protocol: TCP
      port: 8076
      targetPort: 8076
  type: ClusterIP
