oracle kubernetes/clani-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skavtko-clani
spec:
  selector:
    app: skavtko-clani
  ports:
    - protocol: TCP
      port: 8071
      targetPort: 8071
  type: LoadBalancer  # or ClusterIP, NodePort depending on your needs
