oracle kubernetes/ing-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-lb
spec:
  selector:
    app: skavtko-ms-ingress
  ports:
    - protocol: TCP
      port: 80        # External port for HTTP
      targetPort: 80   # Internal port for NGINX Ingress Controller
    # - protocol: TCP
    #   port: 443       # External port for HTTPS
    #   targetPort: 443  # Internal port for NGINX Ingress Controller
  type: LoadBalancer
