oracle kubernetes/osebnospremljanje-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skavtko-os-service
spec:
  selector:
    app: skavtko-os
  ports:
    - protocol: TCP
      port: 8075
      targetPort: 8075
  type: LoadBalancer
