oracle kubernetes/prisotnosti-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skavtko-prisotnosti
spec:
  selector:
    app: skavtko-prisotnosti
  ports:
    - protocol: TCP
      port: 8074
      targetPort: 8074
  type: LoadBalancer
