oracle kubernetes/skupine-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skupine # skupine.default.svc.cluster.local
spec:
  selector:
    app: skavtko-skupine
  ports:
    - protocol: TCP
      port: 8072        # Port exposed by the service
      targetPort: 8072 # Port the pod's container listens to
  type: ClusterIP  # Default type, exposes the service only within the cluster
