oracle kubernetes/skupine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skavtko-skupine
spec:
  selector:
    app: skavtko-skupine
  ports:
    - protocol: TCP
      port: 8072
      targetPort: 8072
  type: LoadBalancer
