oracle kubernetes/srecanja-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: srecanja
spec:
  selector:
    app: skavtko-srecanja
  ports:
    - protocol: TCP
      port: 8073        # Port exposed by the service
      targetPort: 8073 # Port the pod's container listens to
  type: ClusterIP  # Default type, exposes the service only within the cluster
