oracle kubernetes/srecanja-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skavtko-srecanja
spec:
  selector:
    app: skavtko-srecanja
  ports:
    - protocol: TCP
      port: 8073
      targetPort: 8073
  type: LoadBalancer  # or ClusterIP, NodePort depending on your needs
