oracle kubernetes/termini-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skavtko-termini
spec:
  selector:
    app: skavtko-termini
  ports:
    - protocol: TCP
      port: 8076
      targetPort: 8076
  type: LoadBalancer
